manifests/routes/route-ui-admin.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ui-admin
spec:
  path: /
  to:
    kind: Service
    name: ui-admin
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
